# dokimos

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
corpus/: index.json
docs/: README.md  book.toml
docs/src/: SUMMARY.md  ai-likeness.md  cli-reference.md  configuration.md  getting-started.md  index.md  troubleshooting.md
src/dokimos/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging.py  pipeline.py  reporting.py
src/dokimos/engines/: __init__.py  base.py  local_indexer.py  placeholder_ai.py  placeholder_indexer.py  placeholder_plagiarism.py  remote_plagiarism.py  shingling.py  shingling_plagiarism.py  stylometric_ai.py
src/dokimos/ingestion/: __init__.py  chunker.py  reader.py
src/dokimos/schemas/: __init__.py  documents.py  index.py  requests.py  results.py
tests/: conftest.py  test_cli.py  test_contract.py  test_engines.py  test_evaluation.py  test_ingestion.py  test_pipeline.py  test_schemas.py
tests/fixtures/: ai_like_text.txt  clearly_human.txt  copied_passage.txt  mixed_ai_human.txt  natural_text.txt  original_passage.txt  paraphrased_passage.txt  templated_text.txt
